# RemoteSocket

./: README.md
RemoteSocket/: CMakeLists.txt  main.cpp
RemoteSocketServer/: CMakeLists.txt  main.cpp
cmake/: Pack.cmake  SetOutputPaths.cmake  Utility.cmake  Windeployqt.cmake
